--- a/http-server/home.html
+++ b/http-server/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>My Application Home</h1>
-    <a href="./project.html">Projects</a>
-    <a href="/registration.html">Registration Page</a>
+    <a href="./project">Projects</a>
+    <a href="/registration">Registration Page</a>
 </body>
 </html>
